# Vimficiency

./: .gitignore  CLAUDE.md  CMakeLists.txt  CharacterToKeys.cpp  Config.h  EffortModel.h  EffortState.h  Optimizer.h  Position.h  State.h  TODO.txt  TemplateKeyboard.cpp  aggregated_notes.txt  config.lua  edit_boundary_plan.txt  init.lua  insert_mode_plan.txt  invocation_plan.txt  main.cpp  operator_motion_plan.txt  operator_motions_temp.txt  search.lua  sim.lua  vimficiency_notes.txt
.cache/clangd/index/: CharacterToKeys.cpp.E3DD61331D0A8120.idx  CharacterToKeys.h.33F41D678C8CD7D0.idx  Config.h.694DD1BC269417C0.idx  EffortState.cpp.8C4DCEC3DC6BE57E.idx  EffortState.h.7BD4B93018CFCEC0.idx  KeyboardModel.h.BF117461FD0E2E6A.idx  KeyboardUtils.h.595A3D541EC876CF.idx  Optimizer.cpp.03E8E2E81E4408B5.idx  Optimizer.h.DFB5D70EDCC0F50F.idx  SequenceTokenizer.cpp.EEC90328659EE4D3.idx  SequenceTokenizer.h.8DBD16A549C92BAE.idx  Snapshot.cpp.86E950FE1FF47233.idx  State.cpp.3279FC72695F49A7.idx  State.h.C12860C118CAD06F.idx  TemplateKeyboard.cpp.F572E7DEF1D4F9FF.idx  TemplateKeyboard.h.97C7A78E100CC51A.idx  TestUtils.cpp.658CDE190812F2EC.idx  TestUtils.h.8D557D9961CE867A.idx  VimUtils.cpp.A4895E76665CC5EC.idx  VimUtils.h.4BA2776EA1C1FD1D.idx  main.cpp.04262181B25C6EB7.idx
data/: composition_case.txt  temp.txt
data/TestFiles/: a1_long_line.txt  a3_spaced_lines.txt  e2_0_substitution.txt  e2_1_substitution.txt  e3_1_change_word.txt  e4_0_add_word.txt  e4_1_add_word.txt  e5_0_change_and_edit.txt  e5_1_change_and_edit.txt  m1_main_basic.txt  m2_main_big.txt  m3_source_code.txt  source_code.txt  temp_test.txt  uniform.txt
data/VimficiencyFiles/: uniform_end.txt  uniform_start.txt
lua/tests/: b_motion_oracle.lua  verify_edit_sequence.lua
lua/vimficiency/: config.lua  ffi.lua  init.lua  key_tracking.lua  session.lua  session_store.lua  simulate.lua  types.lua  util.lua
src/: CharacterToKeys.cpp  Config.h  EffortState.cpp  EffortState.h  KeyboardModel.h  KeyboardUtils.h  Optimizer.cpp  Optimizer.h  SequenceTokenizer.cpp  State.h  TemplateKeyboard.cpp  TemplateKeyboard.h  lua_exports.cpp  main.cpp  temp.txt
src/Editor/: Edit.cpp  Edit.h  Mode.h  Motion.cpp  Motion.h  NavContext.h  Position.h  Range.h  Snapshot.cpp  Snapshot.h
src/Keyboard/: CharToKeys.cpp  CharToKeys.h  CharacterToKeys.cpp  CharacterToKeys.h  EditToKeys.cpp  EditToKeys.h  EditToKeysPrimitives.cpp  EditToKeysPrimitives.h  KeyboardModel.cpp  KeyboardModel.h  MotionToKeys.cpp  MotionToKeys.h  MotionToKeysBuildingBlocks.cpp  MotionToKeysBuildingBlocks.h  MotionToKeysPrimitives.cpp  MotionToKeysPrimitives.h  SequenceTokenizer.cpp  SequenceTokenizer.h  StringToKeys.h  TemplateKeyboard.cpp  TemplateKeyboard.h  XMacroKeyDefinitions.h
src/Optimizer/: BoundaryFlags.cpp  BoundaryFlags.h  BufferIndex.cpp  BufferIndex.h  CompositionOptimizer.cpp  CompositionOptimizer.h  Config.cpp  Config.h  DiffState.cpp  DiffState.h  EditBoundary.cpp  EditBoundary.h  EditOptimizer.cpp  EditOptimizer.h  ImpliedExclusions.h  Levenshtein.cpp  Levenshtein.h  MovementOptimizer.cpp  MovementOptimizer.h  Optimizer.cpp  Optimizer.h  OptimizerParams.h  ReachLevel.cpp  ReachLevel.h  Result.h
src/State/: CompositionState.h  EditState.cpp  EditState.h  EffortState.cpp  EffortState.h  MotionState.cpp  MotionState.h  PosKey.h  RunningEffort.cpp  RunningEffort.h  Sequence.cpp  Sequence.h  State.cpp  State.h
src/TestFiles/: long_line.txt  main_big.txt
src/Testing/: CMakeLists.txt  OptimizerMovementTest.cpp  TestUtils.cpp  TestUtils.h
src/Utils/: CoutCapture.h  Debug.h  Lines.h  StringUtils.h
src/VimCore/: VimEditUtils.cpp  VimEditUtils.h  VimMovementUtils.cpp  VimMovementUtils.h  VimOptions.h  VimTextObjects.cpp  VimTextObjects.h  VimUtils.cpp  VimUtils.h
tests/: BackwardReachTest.cpp  CMakeLists.txt  ConfigurationTest.cpp  CountMotionsTest.cpp  DebugSequenceTests.cpp  DiffStateTest.cpp  EditOptimizerTests.cpp  ForwardReachTest.cpp  LevenshteinTest.cpp  MotionTest.cpp  MovementOptimizerTest.cpp  OptimizerMovementTest.cpp  OptimizerTest.cpp  Temp.cpp  TestUtils.cpp  TestUtils.h  edit_boundary_backward_case.txt  edit_boundary_forward_case.txt
tests/Actions/: CountMotionsTest.cpp  EditTest.cpp  MotionTest.cpp
tests/EditPrimitives/: DiffStateTest.cpp  LevenshteinTest.cpp
tests/Misc/: ConfigurationTest.cpp  DebugSequenceTests.cpp  ErrorHandlingTest.cpp  HashCollisionTest.cpp
tests/Optimizer/: EditOptimizerTests.cpp  MovementOptimizerTest.cpp
tests/Reach/: BackwardReachTest.cpp
tests/Utils/: TestUtils.cpp  TestUtils.h
